# Learnings

./: README.md
FAST_LIO/: evo_pose.txt  pose.txt
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: mid360.yaml
FAST_LIO/src/: laserMapping.cpp
FAST_LIO_Origin/Log/: mat_pre.txt
FAST_LIO_Origin/config/: mid360.yaml
FAST_LIO_Origin/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
HBA_L/: CMakeLists.txt
HBA_L/include/: ba.hpp  hba.hpp  mypcl.hpp
HBA_L/src/: hba.cpp
HBA_L_run/: CMakeLists.txt  package.xml
HBA_L_run/include/: ba.hpp  hba.hpp  mypcl.hpp  tools.hpp
HBA_L_run/src/: hba.cpp
HBA_ROS2/: CMakeLists.txt  package.xml
HBA_ROS2/config/: hba.yaml
HBA_ROS2/include/: ba.hpp  hba.hpp  mypcl.hpp  tools.hpp
HBA_ROS2/src/: hba.cpp
HBA_modified/: CMakeLists.txt  package.xml
HBA_modified/include/: hba.hpp  layer.hpp  mypcl.hpp  tools.hpp  voxel.hpp
HBA_modified/launch/: hba.launch
HBA_modified/src/: hba.cpp
SLAM/VIO/chap1/R_Q_dif/: CMakeLists.txt  R_Q_dif.cpp
cloud_merge/: CMakeLists.txt
cloud_merge/src/: addpoints.cpp
